[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/root/popups/config/ScreenScrapperSettings.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/visibility_visible.svg" type="Texture" id=2]
[ext_resource path="res://assets/icons/visibility_hidden.svg" type="Texture" id=3]
[ext_resource path="res://assets/fonts/NotoSans-BoldItalic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/fonts/NotoSans-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/fonts/NotoSans-Italic.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/fonts/NotoSans-Bold.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=2]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="ScreenScrapperSettings" type="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 173.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 40.0
hint_tooltip = "Whether to use a custom account for ScreenScraper. If the
maximum amount of daily requests is hit, RetroHub can no
longer scrape media.
If that happens, create an account on ScreenScraper and
nsert the details here to use your personal daily quota
instead."
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 13.0
margin_right = 944.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Use custom account?"

[node name="UseAccount" type="CheckButton" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 948.0
margin_right = 1024.0
margin_bottom = 40.0

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 44.0
margin_right = 1024.0
margin_bottom = 74.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer2"]
margin_top = 8.0
margin_right = 720.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Username:"

[node name="Username" type="LineEdit" parent="HBoxContainer2"]
unique_name_in_owner = true
margin_left = 724.0
margin_right = 1024.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 30 )
editable = false
clear_button_enabled = true
placeholder_text = "Username"
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
margin_top = 78.0
margin_right = 1024.0
margin_bottom = 108.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer3"]
margin_top = 8.0
margin_right = 686.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Password:"

[node name="ShowPassword" type="TextureButton" parent="HBoxContainer3"]
margin_left = 690.0
margin_right = 720.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Password" type="LineEdit" parent="HBoxContainer3"]
unique_name_in_owner = true
margin_left = 724.0
margin_right = 1024.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 30 )
editable = false
secret = true
clear_button_enabled = true
placeholder_text = "Password"
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer4" type="HBoxContainer" parent="."]
margin_top = 112.0
margin_right = 1024.0
margin_bottom = 172.0

[node name="Label" type="RichTextLabel" parent="HBoxContainer4"]
margin_left = 724.0
margin_right = 1024.0
margin_bottom = 60.0
rect_min_size = Vector2( 300, 60 )
size_flags_horizontal = 10
custom_fonts/bold_italics_font = SubResource( 2 )
custom_fonts/italics_font = SubResource( 1 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[img=20]assets/icons/warning.svg[/img][i][b] Warning: [/b]Due to the way ScreenScraper works, the password will be stored in plaintext.[/i]"
text = " Warning: Due to the way ScreenScraper works, the password will be stored in plaintext."

[connection signal="toggled" from="HBoxContainer/UseAccount" to="." method="_on_UseAccount_toggled"]
[connection signal="text_changed" from="HBoxContainer2/Username" to="." method="_on_Username_text_changed"]
[connection signal="toggled" from="HBoxContainer3/ShowPassword" to="." method="_on_ShowPassword_toggled"]
[connection signal="text_changed" from="HBoxContainer3/Password" to="." method="_on_Password_text_changed"]
